准备分享：改变量名，调整代码结构